Fix result storage

--- a/src/01_cleaning_eda/temp.ipynb
+++ b/src/01_cleaning_eda/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,68 +12,7 @@
       "0\n",
       "1\n",
       "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n"
+      "3\n"
      ]
     }
    ],
@@ -85,37 +24,52 @@
     "import io\n",
     "\n",
     "\n",
-    "df = pd.read_csv('../../data/cleaned/cleaned_dataset.csv')\n",
+    "df = pd.read_csv(\"../../data/cleaned/cleaned_dataset.csv\")\n",
     "\n",
-    "df['FireDiscoveryDateTime'] = pd.to_datetime(df['FireDiscoveryDateTime'], infer_datetime_format=True, errors = 'coerce')\n",
-    "df['ControlDateTime'] = pd.to_datetime(df['ControlDateTime'], infer_datetime_format=True, errors = 'coerce')\n",
+    "df[\"FireDiscoveryDateTime\"] = pd.to_datetime(\n",
+    "    df[\"FireDiscoveryDateTime\"], infer_datetime_format=True, errors=\"coerce\"\n",
+    ")\n",
+    "df[\"ControlDateTime\"] = pd.to_datetime(\n",
+    "    df[\"ControlDateTime\"], infer_datetime_format=True, errors=\"coerce\"\n",
+    ")\n",
+    "\n",
     "\n",
     "def build_request_param(id, lat, long, start_date, end_date, result_df, base_uri):\n",
-    "  print(id)\n",
-    "  params = f\"latitude={lat}&longitude={long}&start={start_date.strftime('%Y%m%d')}&end={end_date.strftime('%Y%m%d')}\"\n",
-    "  base_uri += params\n",
+    "    print(id)\n",
+    "    params = f\"latitude={lat}&longitude={long}&start={start_date.strftime('%Y%m%d')}&end={end_date.strftime('%Y%m%d')}\"\n",
+    "    base_uri += params\n",
     "\n",
-    "  res = requests.get(base_uri)\n",
+    "    res = requests.get(base_uri)\n",
     "\n",
-    "  split_text = res.text.split('-END HEADER-')\n",
+    "    split_text = res.text.split(\"-END HEADER-\")\n",
     "\n",
-    "  if len(split_text) >= 2:\n",
-    "    response_df = pd.read_csv(io.StringIO(split_text[1]))\n",
-    "    # response_df['DATE'] = response_df['YEAR'].apply(str) + '-' + response_df['MO'].apply(str) + '-' + response_df['DY'].apply(str)\n",
-    "    # response_df.drop(columns=['YEAR', 'MO', 'DY'], inplace=True)\n",
-    "    response_df['LAT'] = lat\n",
-    "    response_df['LONG'] = long\n",
-    "    response_df['ID'] = id\n",
-    "    result_df = pd.concat([result_df, response_df])\n",
+    "    if len(split_text) >= 2:\n",
+    "        response_df = pd.read_csv(io.StringIO(split_text[1]))\n",
+    "        # response_df['DATE'] = response_df['YEAR'].apply(str) + '-' + response_df['MO'].apply(str) + '-' + response_df['DY'].apply(str)\n",
+    "        # response_df.drop(columns=['YEAR', 'MO', 'DY'], inplace=True)\n",
+    "        response_df[\"LAT\"] = lat\n",
+    "        response_df[\"LONG\"] = long\n",
+    "        response_df[\"ID\"] = id\n",
+    "        result_df = pd.concat([result_df, response_df])\n",
+    "        return result_df\n",
+    "\n",
     "\n",
     "result_df = pd.DataFrame()\n",
-    "parameters='parameters=T2M,T2M_MAX,QV2M,PRECTOTCORR,WS2M,WS2M_MAX,WS10M,WS10M_MAX,GWETTOP,GWETPROF'\n",
-    "base_uri = f'https://power.larc.nasa.gov/api/temporal/daily/point?time-standard=lst&header=true&format=csv&community=sb&{parameters}&'\n",
-    "  \n",
+    "parameters = \"parameters=T2M,T2M_MAX,QV2M,PRECTOTCORR,WS2M,WS2M_MAX,WS10M,WS10M_MAX,GWETTOP,GWETPROF\"\n",
+    "base_uri = f\"https://power.larc.nasa.gov/api/temporal/daily/point?time-standard=lst&header=true&format=csv&community=sb&{parameters}&\"\n",
     "\n",
-    "df.reset_index().apply(lambda row: build_request_param(row['index'], row['InitialLatitude'], row['InitialLongitude'], row['FireDiscoveryDateTime'], row['ControlDateTime'], result_df, base_uri), axis=1)\n",
+    "for i in df.index:\n",
+    "    result_df = build_request_param(\n",
+    "        i,\n",
+    "        df.loc[i, \"InitialLatitude\"],\n",
+    "        df.loc[i, \"InitialLongitude\"],\n",
+    "        df.loc[i, \"FireDiscoveryDateTime\"],\n",
+    "        df.loc[i, \"ControlDateTime\"],\n",
+    "        result_df,\n",
+    "        base_uri,\n",
+    "    )\n",
     "\n",
-    "result_df.to_csv('../../data/cleaned/weather.csv')\n"
+    "result_df.to_csv(\"../../data/cleaned/weather.csv\")\n"
    ]
   },
   {
