Change dataset name

--- a/src/00_collect_data/meteo_api_data_collection.ipynb
+++ b/src/00_collect_data/meteo_api_data_collection.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/cleaned/cleaned_dataset.csv')\n",
+    "df = pd.read_csv('../../data/cleaned/wildfire.csv')\n",
     "\n",
     "df.head()"
    ]
