Update meteo api

--- a/src/00_collect_data/meteo_api_data_collection.ipynb
+++ b/src/00_collect_data/meteo_api_data_collection.ipynb
@@ -2,22 +2,228 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "from datetime import datetime\n",
-    "from meteostat import Point, Daily"
+    "from datetime import datetime, timedelta\n",
+    "from meteostat import Point, Daily, Hourly, Stations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>ContainmentDateTime</th>\n",
+       "      <th>ControlDateTime</th>\n",
+       "      <th>DailyAcres</th>\n",
+       "      <th>DiscoveryAcres</th>\n",
+       "      <th>FireCause</th>\n",
+       "      <th>FireDiscoveryDateTime</th>\n",
+       "      <th>IncidentTypeCategory</th>\n",
+       "      <th>IncidentTypeKind</th>\n",
+       "      <th>InitialLatitude</th>\n",
+       "      <th>InitialLongitude</th>\n",
+       "      <th>IrwinID</th>\n",
+       "      <th>LocalIncidentIdentifier</th>\n",
+       "      <th>POOCounty</th>\n",
+       "      <th>POODispatchCenterID</th>\n",
+       "      <th>POOFips</th>\n",
+       "      <th>POOState</th>\n",
+       "      <th>UniqueFireIdentifier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-111.348611</td>\n",
+       "      <td>33.195755</td>\n",
+       "      <td>2020-07-23 05:29:59+00:00</td>\n",
+       "      <td>2020-07-23 05:29:59+00:00</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>2020-07-22 21:51:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>33.195810</td>\n",
+       "      <td>-111.348700</td>\n",
+       "      <td>{951823FA-0B72-4295-87C8-E042D602324E}</td>\n",
+       "      <td>1450</td>\n",
+       "      <td>Pinal</td>\n",
+       "      <td>AZTDC</td>\n",
+       "      <td>4021</td>\n",
+       "      <td>US-AZ</td>\n",
+       "      <td>2020-AZA3S-001450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-115.748812</td>\n",
+       "      <td>40.617506</td>\n",
+       "      <td>2020-08-03 23:00:00+00:00</td>\n",
+       "      <td>2020-09-02 15:00:00+00:00</td>\n",
+       "      <td>5985.9</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Natural</td>\n",
+       "      <td>2020-07-19 23:00:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>40.602563</td>\n",
+       "      <td>-115.719777</td>\n",
+       "      <td>{91E0CBAB-A24E-4590-B6C6-2B4A46907E8A}</td>\n",
+       "      <td>10145</td>\n",
+       "      <td>Elko</td>\n",
+       "      <td>NVEIC</td>\n",
+       "      <td>32007</td>\n",
+       "      <td>US-NV</td>\n",
+       "      <td>2020-NVECFX-010145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-108.193611</td>\n",
+       "      <td>39.858486</td>\n",
+       "      <td>2020-08-30 00:00:00+00:00</td>\n",
+       "      <td>2020-09-10 14:00:00+00:00</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Natural</td>\n",
+       "      <td>2020-08-29 21:46:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>39.891710</td>\n",
+       "      <td>-108.266500</td>\n",
+       "      <td>{3568D344-E3FB-415C-8014-ED34ECEAAB25}</td>\n",
+       "      <td>323</td>\n",
+       "      <td>Rio Blanco</td>\n",
+       "      <td>COCRC</td>\n",
+       "      <td>8103</td>\n",
+       "      <td>US-CO</td>\n",
+       "      <td>2020-COWRD-000323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-109.703111</td>\n",
+       "      <td>40.227646</td>\n",
+       "      <td>2020-10-28 20:15:00+00:00</td>\n",
+       "      <td>2020-10-28 20:15:00+00:00</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>2020-10-28 19:37:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>40.227700</td>\n",
+       "      <td>-109.703169</td>\n",
+       "      <td>{4BEBC503-DACD-4198-A1D8-323B614DA555}</td>\n",
+       "      <td>100463</td>\n",
+       "      <td>Uintah</td>\n",
+       "      <td>UTUBC</td>\n",
+       "      <td>49047</td>\n",
+       "      <td>US-UT</td>\n",
+       "      <td>2020-UTNES-100463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-110.385511</td>\n",
+       "      <td>31.961145</td>\n",
+       "      <td>2020-07-10 18:14:59+00:00</td>\n",
+       "      <td>2020-07-10 18:14:59+00:00</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>Human</td>\n",
+       "      <td>2020-07-09 16:34:59+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>31.961200</td>\n",
+       "      <td>-110.385600</td>\n",
+       "      <td>{FB125AAC-0DE2-4547-A2D3-32891D98CB0F}</td>\n",
+       "      <td>1263</td>\n",
+       "      <td>Cochise</td>\n",
+       "      <td>AZTDC</td>\n",
+       "      <td>4003</td>\n",
+       "      <td>US-AZ</td>\n",
+       "      <td>2020-AZA3S-001263</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            X          Y        ContainmentDateTime  \\\n",
+       "0 -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
+       "1 -115.748812  40.617506  2020-08-03 23:00:00+00:00   \n",
+       "2 -108.193611  39.858486  2020-08-30 00:00:00+00:00   \n",
+       "3 -109.703111  40.227646  2020-10-28 20:15:00+00:00   \n",
+       "4 -110.385511  31.961145  2020-07-10 18:14:59+00:00   \n",
+       "\n",
+       "             ControlDateTime  DailyAcres  DiscoveryAcres FireCause  \\\n",
+       "0  2020-07-23 05:29:59+00:00         8.0             2.5     Human   \n",
+       "1  2020-09-02 15:00:00+00:00      5985.9             5.0   Natural   \n",
+       "2  2020-09-10 14:00:00+00:00         0.1             1.0   Natural   \n",
+       "3  2020-10-28 20:15:00+00:00         0.1             0.1     Human   \n",
+       "4  2020-07-10 18:14:59+00:00         0.1             0.1     Human   \n",
+       "\n",
+       "       FireDiscoveryDateTime IncidentTypeCategory IncidentTypeKind  \\\n",
+       "0  2020-07-22 21:51:00+00:00                   WF               FI   \n",
+       "1  2020-07-19 23:00:00+00:00                   WF               FI   \n",
+       "2  2020-08-29 21:46:00+00:00                   WF               FI   \n",
+       "3  2020-10-28 19:37:00+00:00                   WF               FI   \n",
+       "4  2020-07-09 16:34:59+00:00                   WF               FI   \n",
+       "\n",
+       "   InitialLatitude  InitialLongitude                                 IrwinID  \\\n",
+       "0        33.195810       -111.348700  {951823FA-0B72-4295-87C8-E042D602324E}   \n",
+       "1        40.602563       -115.719777  {91E0CBAB-A24E-4590-B6C6-2B4A46907E8A}   \n",
+       "2        39.891710       -108.266500  {3568D344-E3FB-415C-8014-ED34ECEAAB25}   \n",
+       "3        40.227700       -109.703169  {4BEBC503-DACD-4198-A1D8-323B614DA555}   \n",
+       "4        31.961200       -110.385600  {FB125AAC-0DE2-4547-A2D3-32891D98CB0F}   \n",
+       "\n",
+       "   LocalIncidentIdentifier   POOCounty POODispatchCenterID  POOFips POOState  \\\n",
+       "0                     1450       Pinal               AZTDC     4021    US-AZ   \n",
+       "1                    10145        Elko               NVEIC    32007    US-NV   \n",
+       "2                      323  Rio Blanco               COCRC     8103    US-CO   \n",
+       "3                   100463      Uintah               UTUBC    49047    US-UT   \n",
+       "4                     1263     Cochise               AZTDC     4003    US-AZ   \n",
+       "\n",
+       "  UniqueFireIdentifier  \n",
+       "0    2020-AZA3S-001450  \n",
+       "1   2020-NVECFX-010145  \n",
+       "2    2020-COWRD-000323  \n",
+       "3    2020-UTNES-100463  \n",
+       "4    2020-AZA3S-001263  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('../../data/cleaned/wildfire.csv')\n",
     "\n",
@@ -26,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,26 +242,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_weather_meteo(id, lat, long, start_date, end_date, result_df):\n",
-    "  print(id)\n",
-    "  loc_point = Point(lat, long)\n",
-    "  data = Daily(loc_point, start_date.replace(tzinfo=None), end_date.replace(tzinfo=None))\n",
+    "def get_weather_meteo(id, lat, long, start, end, result_df):\n",
+    "  start_date_str = start.strftime(\"%Y-%m-%d\").split('-')\n",
+    "  end_date_str = end.strftime(\"%Y-%m-%d\").split('-')\n",
+    "\n",
+    "  start_date = datetime(int(start_date_str[0]), int(start_date_str[1]), int(start_date_str[2]))\n",
+    "  end_date = datetime(int(end_date_str[0]), int(end_date_str[1]), int(end_date_str[2]))\n",
+    "\n",
+    "  if start_date == end_date:\n",
+    "      end_date += timedelta(days=1)\n",
+    "\n",
+    "  data = Daily(Point(lat, long), start_date, end_date)\n",
     "  data = data.fetch().reset_index()\n",
     "\n",
     "  data['lat'] = lat\n",
     "  data['long'] = long\n",
     "  data['id'] = id\n",
+    "\n",
     "  result_df = pd.concat([result_df, data])\n",
     "  return result_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +283,12 @@
     "        df.loc[i, \"FireDiscoveryDateTime\"],\n",
     "        df.loc[i, \"ControlDateTime\"],\n",
     "        meteo_res_df,\n",
-    "    )\n"
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +303,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
