Finished api calls

--- a/src/00_collect_data/meteo_api_data_collection.ipynb
+++ b/src/00_collect_data/meteo_api_data_collection.ipynb
@@ -292,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meteo_res_df.to_csv('../../data/raw/meteo_weather.csv')"
+    "meteo_res_df.to_csv('../../data/raw/meteo_weather.csv', index=False)"
    ]
   }
  ],
