--- a/src/00_collect_data/nasa_api_data_collection.ipynb
+++ b/src/00_collect_data/nasa_api_data_collection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_request_param(id, lat, long, start_date, end_date, result_df, base_uri):\n",
-    "    print(id)\n",
     "    params = f\"latitude={lat}&longitude={long}&start={start_date.strftime('%Y%m%d')}&end={end_date.strftime('%Y%m%d')}\"\n",
     "    base_uri += params\n",
     "\n",
@@ -43,8 +42,6 @@
     "\n",
     "    if len(split_text) >= 2:\n",
     "        response_df = pd.read_csv(io.StringIO(split_text[1]))\n",
-    "        # response_df['DATE'] = response_df['YEAR'].apply(str) + '-' + response_df['MO'].apply(str) + '-' + response_df['DY'].apply(str)\n",
-    "        # response_df.drop(columns=['YEAR', 'MO', 'DY'], inplace=True)\n",
     "        response_df[\"LAT\"] = lat\n",
     "        response_df[\"LONG\"] = long\n",
     "        response_df[\"ID\"] = id\n",
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,19 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nasa_df.to_csv(\"../../data/raw/nasa_weather.csv\")\n"
+    "nasa_df.to_csv(\"../../data/raw/nasa_weather.csv\", index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
