--- a/src/01_cleaning_eda/bt_cleaning.ipynb
+++ b/src/01_cleaning_eda/bt_cleaning.ipynb
@@ -25,9 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdf = pd.read_csv('../../data/raw/meteo_weather.csv')\n",
-    "fdf = pd.read_csv('../../data/cleaned/wildfire.csv')\n",
-    "ndf = pd.read_csv('../../data/raw/weather.csv')"
+    "mdf = pd.read_csv(\"../../data/raw/meteo_weather.csv\")\n",
+    "fdf = pd.read_csv(\"../../data/cleaned/wildfire.csv\")\n",
+    "ndf = pd.read_csv(\"../../data/raw/weather.csv\")\n"
    ]
   },
   {
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdf.drop(columns='Unnamed: 0', inplace=True)\n",
-    "ndf.drop(columns='Unnamed: 0', inplace=True)"
+    "mdf.drop(columns=\"Unnamed: 0\", inplace=True)\n",
+    "ndf.drop(columns=\"Unnamed: 0\", inplace=True)\n"
    ]
   },
   {
@@ -247,9 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    rain_sum\n",
+      "ID          \n",
+      "0        2.6\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -271,7 +280,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>rain_mean</th>\n",
        "      <th>wind_speed_2m_mean</th>\n",
        "      <th>wind_speed_2m_max_mean</th>\n",
        "      <th>wind_speed_10m_mean</th>\n",
@@ -287,95 +295,44 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.300000</td>\n",
-       "      <td>1.410000</td>\n",
-       "      <td>3.090000</td>\n",
-       "      <td>1.895000</td>\n",
-       "      <td>4.180000</td>\n",
-       "      <td>13.210000</td>\n",
-       "      <td>29.900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.274348</td>\n",
-       "      <td>1.933913</td>\n",
-       "      <td>3.914783</td>\n",
-       "      <td>2.865217</td>\n",
-       "      <td>5.237174</td>\n",
-       "      <td>5.657391</td>\n",
-       "      <td>23.396304</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.136923</td>\n",
-       "      <td>1.733846</td>\n",
-       "      <td>2.986154</td>\n",
-       "      <td>2.993846</td>\n",
-       "      <td>4.754615</td>\n",
-       "      <td>4.731538</td>\n",
-       "      <td>16.121538</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.250000</td>\n",
-       "      <td>2.980000</td>\n",
-       "      <td>1.880000</td>\n",
-       "      <td>4.020000</td>\n",
-       "      <td>2.560000</td>\n",
-       "      <td>5.480000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.290000</td>\n",
-       "      <td>3.090000</td>\n",
-       "      <td>5.055000</td>\n",
-       "      <td>4.265000</td>\n",
-       "      <td>6.800000</td>\n",
-       "      <td>9.950000</td>\n",
-       "      <td>31.235000</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>1.895</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>13.21</td>\n",
+       "      <td>29.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    rain_mean  wind_speed_2m_mean  wind_speed_2m_max_mean  \\\n",
-       "ID                                                          \n",
-       "0    1.300000            1.410000                3.090000   \n",
-       "1    0.274348            1.933913                3.914783   \n",
-       "2    2.136923            1.733846                2.986154   \n",
-       "3    0.000000            1.250000                2.980000   \n",
-       "4    0.290000            3.090000                5.055000   \n",
+       "    wind_speed_2m_mean  wind_speed_2m_max_mean  wind_speed_10m_mean  \\\n",
+       "ID                                                                    \n",
+       "0                 1.41                    3.09                1.895   \n",
        "\n",
-       "    wind_speed_10m_mean  wind_speed_10m_max_mean  humidity_mean  temp_2m_mean  \n",
-       "ID                                                                             \n",
-       "0              1.895000                 4.180000      13.210000     29.900000  \n",
-       "1              2.865217                 5.237174       5.657391     23.396304  \n",
-       "2              2.993846                 4.754615       4.731538     16.121538  \n",
-       "3              1.880000                 4.020000       2.560000      5.480000  \n",
-       "4              4.265000                 6.800000       9.950000     31.235000  "
+       "    wind_speed_10m_max_mean  humidity_mean  temp_2m_mean  \n",
+       "ID                                                        \n",
+       "0                      4.18          13.21          29.9  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ndf_mean = ndf.groupby(\"ID\").mean()[\n",
-    "    [\"PRECTOTCORR\", \"WS2M\", \"WS2M_MAX\", \"WS10M\", \"WS10M_MAX\", \"QV2M\", \"T2M\"]\n",
+    "    [\"WS2M\", \"WS2M_MAX\", \"WS10M\", \"WS10M_MAX\", \"QV2M\", \"T2M\"]\n",
     "]\n",
     "\n",
     "ndf_mean.rename(\n",
     "    columns={\n",
-    "        \"PRECTOTCORR\": \"rain_mean\",\n",
     "        \"WS2M\": \"wind_speed_2m_mean\",\n",
     "        \"WS2M_MAX\": \"wind_speed_2m_max_mean\",\n",
     "        \"WS10M\": \"wind_speed_10m_mean\",\n",
@@ -386,7 +343,16 @@
     "    inplace=True,\n",
     ")\n",
     "\n",
-    "ndf_mean.head()\n"
+    "ndf_sum = ndf.groupby(\"ID\").sum()[[\"PRECTOTCORR\"]]\n",
+    "ndf_sum.rename(\n",
+    "    columns={\n",
+    "        \"PRECTOTCORR\": \"rain_sum\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")\n",
+    "\n",
+    "print(ndf_sum.head(1))\n",
+    "ndf_mean.head(1)\n"
    ]
   },
   {
@@ -591,11 +557,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_date_fire_weather = first_date_fire_weather.merge(ndf_mean, how='inner', left_index=True, right_index=True)"
+    "first_date_fire_weather = first_date_fire_weather.merge(\n",
+    "    ndf_mean, how=\"inner\", left_index=True, right_index=True\n",
+    ")\n",
+    "first_date_fire_weather = first_date_fire_weather.merge(\n",
+    "    ndf_sum, how=\"inner\", left_index=True, right_index=True\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['temp_2m', 'temp_2m_max', 'humidity', 'rain', 'wind_speed_2m',\n",
+       "       'wind_speed_2m_max', 'wind_speed_10m', 'wind_speed_10m_max',\n",
+       "       'surface_soil_wetness_5cm_below', 'surface_soil_wetness_to_bedrock',\n",
+       "       'rain_mean', 'wind_speed_2m_mean_x', 'wind_speed_2m_max_mean_x',\n",
+       "       'wind_speed_10m_mean_x', 'wind_speed_10m_max_mean_x', 'humidity_mean_x',\n",
+       "       'temp_2m_mean_x', 'wind_speed_2m_mean_y', 'wind_speed_2m_max_mean_y',\n",
+       "       'wind_speed_10m_mean_y', 'wind_speed_10m_max_mean_y', 'humidity_mean_y',\n",
+       "       'temp_2m_mean_y', 'rain_sum'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_date_fire_weather.columns"
    ]
   },
   {
@@ -608,16 +607,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = fdf.merge(first_date_fire_weather, how='left', left_index=True, right_index=True)"
+    "merged_df = fdf.merge(\n",
+    "    first_date_fire_weather, how=\"left\", left_index=True, right_index=True\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -653,16 +654,23 @@
        "surface_soil_wetness_5cm_below     4\n",
        "surface_soil_wetness_to_bedrock    4\n",
        "rain_mean                          4\n",
-       "wind_speed_2m_mean                 4\n",
-       "wind_speed_2m_max_mean             4\n",
-       "wind_speed_10m_mean                4\n",
-       "wind_speed_10m_max_mean            4\n",
-       "humidity_mean                      4\n",
-       "temp_2m_mean                       4\n",
+       "wind_speed_2m_mean_x               4\n",
+       "wind_speed_2m_max_mean_x           4\n",
+       "wind_speed_10m_mean_x              4\n",
+       "wind_speed_10m_max_mean_x          4\n",
+       "humidity_mean_x                    4\n",
+       "temp_2m_mean_x                     4\n",
+       "wind_speed_2m_mean_y               4\n",
+       "wind_speed_2m_max_mean_y           4\n",
+       "wind_speed_10m_mean_y              4\n",
+       "wind_speed_10m_max_mean_y          4\n",
+       "humidity_mean_y                    4\n",
+       "temp_2m_mean_y                     4\n",
+       "rain_sum                           4\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -742,16 +750,16 @@
        "      <th>incidenttypecategory</th>\n",
        "      <th>incidenttypekind</th>\n",
        "      <th>...</th>\n",
-       "      <th>wind_speed_10m_max</th>\n",
-       "      <th>surface_soil_wetness_5cm_below</th>\n",
-       "      <th>surface_soil_wetness_to_bedrock</th>\n",
-       "      <th>rain_mean</th>\n",
-       "      <th>wind_speed_2m_mean</th>\n",
-       "      <th>wind_speed_2m_max_mean</th>\n",
-       "      <th>wind_speed_10m_mean</th>\n",
-       "      <th>wind_speed_10m_max_mean</th>\n",
-       "      <th>humidity_mean</th>\n",
-       "      <th>temp_2m_mean</th>\n",
+       "      <th>wind_speed_10m_max_mean_x</th>\n",
+       "      <th>humidity_mean_x</th>\n",
+       "      <th>temp_2m_mean_x</th>\n",
+       "      <th>wind_speed_2m_mean_y</th>\n",
+       "      <th>wind_speed_2m_max_mean_y</th>\n",
+       "      <th>wind_speed_10m_mean_y</th>\n",
+       "      <th>wind_speed_10m_max_mean_y</th>\n",
+       "      <th>humidity_mean_y</th>\n",
+       "      <th>temp_2m_mean_y</th>\n",
+       "      <th>rain_sum</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -768,20 +776,20 @@
        "      <td>WF</td>\n",
        "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>1.3</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>13.21</td>\n",
+       "      <td>29.9</td>\n",
        "      <td>1.41</td>\n",
        "      <td>3.09</td>\n",
        "      <td>1.895</td>\n",
        "      <td>4.18</td>\n",
        "      <td>13.21</td>\n",
        "      <td>29.9</td>\n",
+       "      <td>2.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 36 columns</p>\n",
+       "<p>1 rows × 43 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -794,22 +802,19 @@
        "       firediscoverydatetime incidenttypecategory incidenttypekind  ...  \\\n",
        "0  2020-07-22 21:51:00+00:00                   WF               FI  ...   \n",
        "\n",
-       "   wind_speed_10m_max  surface_soil_wetness_5cm_below  \\\n",
-       "0                3.84                            0.12   \n",
+       "   wind_speed_10m_max_mean_x  humidity_mean_x temp_2m_mean_x  \\\n",
+       "0                       4.18            13.21           29.9   \n",
        "\n",
-       "  surface_soil_wetness_to_bedrock  rain_mean wind_speed_2m_mean  \\\n",
-       "0                            0.38        1.3               1.41   \n",
+       "   wind_speed_2m_mean_y wind_speed_2m_max_mean_y wind_speed_10m_mean_y  \\\n",
+       "0                  1.41                     3.09                 1.895   \n",
        "\n",
-       "  wind_speed_2m_max_mean  wind_speed_10m_mean wind_speed_10m_max_mean  \\\n",
-       "0                   3.09                1.895                    4.18   \n",
+       "   wind_speed_10m_max_mean_y humidity_mean_y temp_2m_mean_y  rain_sum  \n",
+       "0                       4.18           13.21           29.9       2.6  \n",
        "\n",
-       "  humidity_mean  temp_2m_mean  \n",
-       "0         13.21          29.9  \n",
-       "\n",
-       "[1 rows x 36 columns]"
+       "[1 rows x 43 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,12 +825,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv('../../data/processed/wildfire_weather.csv', index=False)"
+    "merged_df.to_csv(\"../../data/processed/wildfire_weather.csv\", index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -844,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
