Sync fire dataset with weather dataset, pull extra datasets to help models

--- a/src/00_collect_data/nasa_api_data_collection.ipynb
+++ b/src/00_collect_data/nasa_api_data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/cleaned/wildfire.csv')\n",
+    "df = pd.read_csv('../../data/processed/wildfire.csv')\n",
     "\n",
     "df['FireDiscoveryDateTime'] = pd.to_datetime(df['FireDiscoveryDateTime'], infer_datetime_format=True, errors = 'coerce')\n",
     "df['ControlDateTime'] = pd.to_datetime(df['ControlDateTime'], infer_datetime_format=True, errors = 'coerce')"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,297 @@
    "outputs": [],
    "source": [
     "nasa_df.to_csv(\"../../data/raw/nasa_weather.csv\", index=False)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get relative humidity to calculate fuel moister"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2863, 20)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = (df[df['DailyAcres'] > 1]) \n",
+    "filtered_df.shape\n",
+    "\n",
+    "filtered_df = filtered_df[((filtered_df['ControlDateTime'] - filtered_df['FireDiscoveryDateTime']) > timedelta(days=1))]\n",
+    "filtered_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>ContainmentDateTime</th>\n",
+       "      <th>ControlDateTime</th>\n",
+       "      <th>DailyAcres</th>\n",
+       "      <th>DiscoveryAcres</th>\n",
+       "      <th>FireCause</th>\n",
+       "      <th>FireDiscoveryDateTime</th>\n",
+       "      <th>IncidentTypeCategory</th>\n",
+       "      <th>IncidentTypeKind</th>\n",
+       "      <th>InitialLatitude</th>\n",
+       "      <th>InitialLongitude</th>\n",
+       "      <th>IrwinID</th>\n",
+       "      <th>LocalIncidentIdentifier</th>\n",
+       "      <th>POOCounty</th>\n",
+       "      <th>POODispatchCenterID</th>\n",
+       "      <th>POOFips</th>\n",
+       "      <th>POOState</th>\n",
+       "      <th>UniqueFireIdentifier</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-115.748812</td>\n",
+       "      <td>40.617506</td>\n",
+       "      <td>2020-08-03 23:00:00+00:00</td>\n",
+       "      <td>2020-09-02 15:00:00+00:00</td>\n",
+       "      <td>5985.9</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Natural</td>\n",
+       "      <td>2020-07-19 23:00:00+00:00</td>\n",
+       "      <td>WF</td>\n",
+       "      <td>FI</td>\n",
+       "      <td>40.602563</td>\n",
+       "      <td>-115.719777</td>\n",
+       "      <td>{91E0CBAB-A24E-4590-B6C6-2B4A46907E8A}</td>\n",
+       "      <td>10145</td>\n",
+       "      <td>Elko</td>\n",
+       "      <td>NVEIC</td>\n",
+       "      <td>32007</td>\n",
+       "      <td>US-NV</td>\n",
+       "      <td>2020-NVECFX-010145</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            X          Y        ContainmentDateTime           ControlDateTime  \\\n",
+       "1 -115.748812  40.617506  2020-08-03 23:00:00+00:00 2020-09-02 15:00:00+00:00   \n",
+       "\n",
+       "   DailyAcres  DiscoveryAcres FireCause     FireDiscoveryDateTime  \\\n",
+       "1      5985.9             5.0   Natural 2020-07-19 23:00:00+00:00   \n",
+       "\n",
+       "  IncidentTypeCategory IncidentTypeKind  InitialLatitude  InitialLongitude  \\\n",
+       "1                   WF               FI        40.602563       -115.719777   \n",
+       "\n",
+       "                                  IrwinID  LocalIncidentIdentifier POOCounty  \\\n",
+       "1  {91E0CBAB-A24E-4590-B6C6-2B4A46907E8A}                    10145      Elko   \n",
+       "\n",
+       "  POODispatchCenterID  POOFips POOState UniqueFireIdentifier  id  \n",
+       "1               NVEIC    32007    US-NV   2020-NVECFX-010145   1  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_df = pd.DataFrame()\n",
+    "parameters = \"parameters=T2MDEW,T2MWET,RH2M,CLRSKY_SFC_PAR_TOT,ALLSKY_SFC_PAR_TOT,ALLSKY_SFC_UV_INDEX\"\n",
+    "base_uri = f\"https://power.larc.nasa.gov/api/temporal/daily/point?time-standard=lst&header=true&format=csv&community=sb&{parameters}&\"\n",
+    "\n",
+    "for i in filtered_df.index:\n",
+    "    nasa_df = build_request_param(\n",
+    "        filtered_df.loc[i, 'id'],\n",
+    "        filtered_df.loc[i, \"InitialLatitude\"],\n",
+    "        filtered_df.loc[i, \"InitialLongitude\"],\n",
+    "        filtered_df.loc[i, \"FireDiscoveryDateTime\"],\n",
+    "        filtered_df.loc[i, \"ControlDateTime\"],\n",
+    "        nasa_df,\n",
+    "        base_uri,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MO</th>\n",
+       "      <th>DY</th>\n",
+       "      <th>T2MDEW</th>\n",
+       "      <th>T2MWET</th>\n",
+       "      <th>RH2M</th>\n",
+       "      <th>CLRSKY_SFC_PAR_TOT</th>\n",
+       "      <th>ALLSKY_SFC_PAR_TOT</th>\n",
+       "      <th>ALLSKY_SFC_UV_INDEX</th>\n",
+       "      <th>LAT</th>\n",
+       "      <th>LONG</th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>7</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>27.31</td>\n",
+       "      <td>155.74</td>\n",
+       "      <td>135.5</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>40.602563</td>\n",
+       "      <td>-115.719777</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   YEAR  MO  DY  T2MDEW  T2MWET   RH2M  CLRSKY_SFC_PAR_TOT  \\\n",
+       "0  2020   7  19    3.02   13.91  27.31              155.74   \n",
+       "\n",
+       "   ALLSKY_SFC_PAR_TOT  ALLSKY_SFC_UV_INDEX        LAT        LONG  ID  \n",
+       "0               135.5                 2.55  40.602563 -115.719777   1  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nasa_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_df.to_csv(\"../../data/raw/nasa_weather_extra.csv\", index=False)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "Past 6 months precipitation for filtered fire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_last_180_prec_df = pd.DataFrame()\n",
+    "parameters = \"parameters=PRECTOTCORR_SUM,PRECSNO\"\n",
+    "base_uri = f\"https://power.larc.nasa.gov/api/temporal/daily/point?time-standard=lst&header=true&format=csv&community=sb&{parameters}&\"\n",
+    "\n",
+    "for i in filtered_df.index:\n",
+    "    nasa_df = build_request_param(\n",
+    "        filtered_df.loc[i, 'id'],\n",
+    "        filtered_df.loc[i, \"InitialLatitude\"],\n",
+    "        filtered_df.loc[i, \"InitialLongitude\"],\n",
+    "        filtered_df.loc[i, \"FireDiscoveryDateTime\"] - pd.tseries.offsets.DateOffset(months=6),\n",
+    "        filtered_df.loc[i, \"FireDiscoveryDateTime\"],\n",
+    "        nasa_df,\n",
+    "        base_uri,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_last_180_prec_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nasa_df.to_csv(\"../../data/raw/nasa_weather_last_180days.csv\", index=False)\n"
    ]
   }
  ],
