--- a/src/01_cleaning_eda/bt_cleaning.ipynb
+++ b/src/01_cleaning_eda/bt_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "mdf = pd.read_csv(\"../../data/raw/meteo_weather.csv\")\n",
-    "fdf = pd.read_csv(\"../../data/cleaned/wildfire.csv\")\n",
+    "fdf = pd.read_csv(\"../../data/processed/wildfire.csv\")\n",
     "ndf = pd.read_csv(\"../../data/raw/weather.csv\")\n"
    ]
   },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "4  40.602563 -115.719777   1    NaN      NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndf.rename(columns={'ID': 'pid'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    rain_sum\n",
-      "ID          \n",
-      "0        2.6\n"
+      "     rain_sum\n",
+      "pid          \n",
+      "0         2.6\n"
      ]
     },
     {
@@ -288,7 +297,7 @@
        "      <th>temp_2m_mean</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ID</th>\n",
+       "      <th>pid</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -312,22 +321,22 @@
        "</div>"
       ],
       "text/plain": [
-       "    wind_speed_2m_mean  wind_speed_2m_max_mean  wind_speed_10m_mean  \\\n",
-       "ID                                                                    \n",
-       "0                 1.41                    3.09                1.895   \n",
+       "     wind_speed_2m_mean  wind_speed_2m_max_mean  wind_speed_10m_mean  \\\n",
+       "pid                                                                    \n",
+       "0                  1.41                    3.09                1.895   \n",
        "\n",
-       "    wind_speed_10m_max_mean  humidity_mean  temp_2m_mean  \n",
-       "ID                                                        \n",
-       "0                      4.18          13.21          29.9  "
+       "     wind_speed_10m_max_mean  humidity_mean  temp_2m_mean  \n",
+       "pid                                                        \n",
+       "0                       4.18          13.21          29.9  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ndf_mean = ndf.groupby(\"ID\").mean()[\n",
+    "ndf_mean = ndf.groupby(\"pid\").mean()[\n",
     "    [\"WS2M\", \"WS2M_MAX\", \"WS10M\", \"WS10M_MAX\", \"QV2M\", \"T2M\"]\n",
     "]\n",
     "\n",
@@ -343,7 +352,7 @@
     "    inplace=True,\n",
     ")\n",
     "\n",
-    "ndf_sum = ndf.groupby(\"ID\").sum()[[\"PRECTOTCORR\"]]\n",
+    "ndf_sum = ndf.groupby(\"pid\").sum()[[\"PRECTOTCORR\"]]\n",
     "ndf_sum.rename(\n",
     "    columns={\n",
     "        \"PRECTOTCORR\": \"rain_sum\",\n",
@@ -357,19 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_7036\\283562732.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_27924\\980918030.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  first_date_fire_weather.drop(columns=[\"YEAR\", \"MO\", \"DY\", \"LAT\", \"LONG\"], inplace=True)\n",
-      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_7036\\283562732.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\btoli\\AppData\\Local\\Temp\\ipykernel_27924\\980918030.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -409,7 +418,7 @@
        "      <th>surface_soil_wetness_to_bedrock</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ID</th>\n",
+       "      <th>pid</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -493,40 +502,40 @@
        "</div>"
       ],
       "text/plain": [
-       "    temp_2m  temp_2m_max  humidity  rain  wind_speed_2m  wind_speed_2m_max  \\\n",
-       "ID                                                                           \n",
-       "0     32.63        38.06     12.02  0.16           1.26               2.77   \n",
-       "1     24.80        33.19      5.92  0.00           1.76               3.42   \n",
-       "2     18.91        26.46      7.93  3.44           2.50               3.65   \n",
-       "3      5.48        16.30      2.56  0.00           1.25               2.98   \n",
-       "4     31.50        39.08      8.91  0.26           2.30               4.45   \n",
+       "     temp_2m  temp_2m_max  humidity  rain  wind_speed_2m  wind_speed_2m_max  \\\n",
+       "pid                                                                           \n",
+       "0      32.63        38.06     12.02  0.16           1.26               2.77   \n",
+       "1      24.80        33.19      5.92  0.00           1.76               3.42   \n",
+       "2      18.91        26.46      7.93  3.44           2.50               3.65   \n",
+       "3       5.48        16.30      2.56  0.00           1.25               2.98   \n",
+       "4      31.50        39.08      8.91  0.26           2.30               4.45   \n",
        "\n",
-       "    wind_speed_10m  wind_speed_10m_max  surface_soil_wetness_5cm_below  \\\n",
-       "ID                                                                       \n",
-       "0             1.71                3.84                            0.12   \n",
-       "1             2.61                4.52                            0.31   \n",
-       "2             4.16                5.82                            0.26   \n",
-       "3             1.88                4.02                            0.17   \n",
-       "4             3.26                5.90                            0.15   \n",
+       "     wind_speed_10m  wind_speed_10m_max  surface_soil_wetness_5cm_below  \\\n",
+       "pid                                                                       \n",
+       "0              1.71                3.84                            0.12   \n",
+       "1              2.61                4.52                            0.31   \n",
+       "2              4.16                5.82                            0.26   \n",
+       "3              1.88                4.02                            0.17   \n",
+       "4              3.26                5.90                            0.15   \n",
        "\n",
-       "    surface_soil_wetness_to_bedrock  \n",
-       "ID                                   \n",
-       "0                              0.38  \n",
-       "1                              0.37  \n",
-       "2                              0.35  \n",
-       "3                              0.34  \n",
-       "4                              0.36  "
+       "     surface_soil_wetness_to_bedrock  \n",
+       "pid                                   \n",
+       "0                               0.38  \n",
+       "1                               0.37  \n",
+       "2                               0.35  \n",
+       "3                               0.34  \n",
+       "4                               0.36  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_date_fire_weather = ndf.drop_duplicates(subset=\"ID\", keep=\"first\")\n",
+    "first_date_fire_weather = ndf.drop_duplicates(subset=\"pid\", keep=\"first\")\n",
     "first_date_fire_weather.drop(columns=[\"YEAR\", \"MO\", \"DY\", \"LAT\", \"LONG\"], inplace=True)\n",
-    "first_date_fire_weather.set_index(\"ID\", inplace=True)\n",
+    "first_date_fire_weather.set_index(\"pid\", inplace=True)\n",
     "\n",
     "first_date_fire_weather.rename(\n",
     "    columns={\n",
@@ -557,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -580,15 +589,12 @@
        "Index(['temp_2m', 'temp_2m_max', 'humidity', 'rain', 'wind_speed_2m',\n",
        "       'wind_speed_2m_max', 'wind_speed_10m', 'wind_speed_10m_max',\n",
        "       'surface_soil_wetness_5cm_below', 'surface_soil_wetness_to_bedrock',\n",
-       "       'rain_mean', 'wind_speed_2m_mean_x', 'wind_speed_2m_max_mean_x',\n",
-       "       'wind_speed_10m_mean_x', 'wind_speed_10m_max_mean_x', 'humidity_mean_x',\n",
-       "       'temp_2m_mean_x', 'wind_speed_2m_mean_y', 'wind_speed_2m_max_mean_y',\n",
-       "       'wind_speed_10m_mean_y', 'wind_speed_10m_max_mean_y', 'humidity_mean_y',\n",
-       "       'temp_2m_mean_y', 'rain_sum'],\n",
+       "       'wind_speed_2m_mean', 'wind_speed_2m_max_mean', 'wind_speed_10m_mean',\n",
+       "       'wind_speed_10m_max_mean', 'humidity_mean', 'temp_2m_mean', 'rain_sum'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fdf.set_index('id', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -653,24 +668,17 @@
        "wind_speed_10m_max                 4\n",
        "surface_soil_wetness_5cm_below     4\n",
        "surface_soil_wetness_to_bedrock    4\n",
-       "rain_mean                          4\n",
-       "wind_speed_2m_mean_x               4\n",
-       "wind_speed_2m_max_mean_x           4\n",
-       "wind_speed_10m_mean_x              4\n",
-       "wind_speed_10m_max_mean_x          4\n",
-       "humidity_mean_x                    4\n",
-       "temp_2m_mean_x                     4\n",
-       "wind_speed_2m_mean_y               4\n",
-       "wind_speed_2m_max_mean_y           4\n",
-       "wind_speed_10m_mean_y              4\n",
-       "wind_speed_10m_max_mean_y          4\n",
-       "humidity_mean_y                    4\n",
-       "temp_2m_mean_y                     4\n",
+       "wind_speed_2m_mean                 4\n",
+       "wind_speed_2m_max_mean             4\n",
+       "wind_speed_10m_mean                4\n",
+       "wind_speed_10m_max_mean            4\n",
+       "humidity_mean                      4\n",
+       "temp_2m_mean                       4\n",
        "rain_sum                           4\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -750,16 +758,40 @@
        "      <th>incidenttypecategory</th>\n",
        "      <th>incidenttypekind</th>\n",
        "      <th>...</th>\n",
-       "      <th>wind_speed_10m_max_mean_x</th>\n",
-       "      <th>humidity_mean_x</th>\n",
-       "      <th>temp_2m_mean_x</th>\n",
-       "      <th>wind_speed_2m_mean_y</th>\n",
-       "      <th>wind_speed_2m_max_mean_y</th>\n",
-       "      <th>wind_speed_10m_mean_y</th>\n",
-       "      <th>wind_speed_10m_max_mean_y</th>\n",
-       "      <th>humidity_mean_y</th>\n",
-       "      <th>temp_2m_mean_y</th>\n",
+       "      <th>wind_speed_10m_max</th>\n",
+       "      <th>surface_soil_wetness_5cm_below</th>\n",
+       "      <th>surface_soil_wetness_to_bedrock</th>\n",
+       "      <th>wind_speed_2m_mean</th>\n",
+       "      <th>wind_speed_2m_max_mean</th>\n",
+       "      <th>wind_speed_10m_mean</th>\n",
+       "      <th>wind_speed_10m_max_mean</th>\n",
+       "      <th>humidity_mean</th>\n",
+       "      <th>temp_2m_mean</th>\n",
        "      <th>rain_sum</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -776,9 +808,9 @@
        "      <td>WF</td>\n",
        "      <td>FI</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>13.21</td>\n",
-       "      <td>29.9</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.38</td>\n",
        "      <td>1.41</td>\n",
        "      <td>3.09</td>\n",
        "      <td>1.895</td>\n",
@@ -789,32 +821,42 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 43 columns</p>\n",
+       "<p>1 rows × 36 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            x          y        containmentdatetime  \\\n",
-       "0 -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
+       "             x          y        containmentdatetime  \\\n",
+       "id                                                     \n",
+       "0  -111.348611  33.195755  2020-07-23 05:29:59+00:00   \n",
        "\n",
-       "             controldatetime  dailyacres  discoveryacres firecause  \\\n",
-       "0  2020-07-23 05:29:59+00:00         8.0             2.5     Human   \n",
+       "              controldatetime  dailyacres  discoveryacres firecause  \\\n",
+       "id                                                                    \n",
+       "0   2020-07-23 05:29:59+00:00         8.0             2.5     Human   \n",
        "\n",
-       "       firediscoverydatetime incidenttypecategory incidenttypekind  ...  \\\n",
-       "0  2020-07-22 21:51:00+00:00                   WF               FI  ...   \n",
+       "        firediscoverydatetime incidenttypecategory incidenttypekind  ...  \\\n",
+       "id                                                                   ...   \n",
+       "0   2020-07-22 21:51:00+00:00                   WF               FI  ...   \n",
        "\n",
-       "   wind_speed_10m_max_mean_x  humidity_mean_x temp_2m_mean_x  \\\n",
-       "0                       4.18            13.21           29.9   \n",
+       "    wind_speed_10m_max  surface_soil_wetness_5cm_below  \\\n",
+       "id                                                       \n",
+       "0                 3.84                            0.12   \n",
        "\n",
-       "   wind_speed_2m_mean_y wind_speed_2m_max_mean_y wind_speed_10m_mean_y  \\\n",
-       "0                  1.41                     3.09                 1.895   \n",
+       "   surface_soil_wetness_to_bedrock  wind_speed_2m_mean wind_speed_2m_max_mean  \\\n",
+       "id                                                                              \n",
+       "0                             0.38                1.41                   3.09   \n",
        "\n",
-       "   wind_speed_10m_max_mean_y humidity_mean_y temp_2m_mean_y  rain_sum  \n",
-       "0                       4.18           13.21           29.9       2.6  \n",
+       "   wind_speed_10m_mean  wind_speed_10m_max_mean humidity_mean temp_2m_mean  \\\n",
+       "id                                                                           \n",
+       "0                1.895                     4.18         13.21         29.9   \n",
        "\n",
-       "[1 rows x 43 columns]"
+       "    rain_sum  \n",
+       "id            \n",
+       "0        2.6  \n",
+       "\n",
+       "[1 rows x 36 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,11 +867,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.to_csv(\"../../data/processed/wildfire_weather.csv\", index=False)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "Add extra dataset"
    ]
   },
   {
@@ -856,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
